--- a/invessence/modules/web/src/main/webapp/pages/consumer/aggr/main.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/aggr/main.xhtml
@@ -6,9 +6,9 @@
                 xmlns:pe="http://primefaces.org/ui/extensions"
                 template="/template/common/invlayout.xhtml">
 
-    <f:metadata>
+<!--    <f:metadata>
         <f:event type="preRenderView" listener="#{yodleeBean.preRenderView}"/>
-    </f:metadata>
+    </f:metadata>-->
 
     <ui:define name="content">
 
