--- a/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/acct.xhtml
+++ b/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/acct.xhtml
@@ -7,8 +7,18 @@
                 template="/WEB-INF/template.xhtml">
 
     <ui:define name="content">
+        <h:outputScript library="yodlee" name="js/jquery-1.11.1.min.js"/>
+        <h:outputScript library="yodlee" name="js/oauth.js" />
+        <h:outputScript library="yodlee" name="js/sha1.js" />
+        <h:outputScript library="yodlee" name="js/jquery.colorbox.js" />
+
+        <h:outputStylesheet library="yodlee" name="css/colorbox.css" />
+        <h:outputStylesheet library="yodlee" name="css/main.css" />
+
+        <h:outputScript library="yodlee" name="js/yodleeCommon.js" />
 
         <h:form id="aggrform">
+        <p:growl id="growl" life="2000" />
             <div class="Container100">
                 <!-- Left Column -->
                <ui:include src="leftMenu.xhtml"/>
@@ -18,21 +28,86 @@
                         <!-- Section -->
                         <div class="Container100">
                             <div class="ContainerIndent">
-                                <div class="Card ShadowEffect">
-                                    <h2 class="CardTopic">Account</h2>
-
-                                    <div class="Seperator">
-                                        <p:commandButton value="Register" id="register" actionListener="#{yodleeBean.userRegistration}" update="growl" icon="ui-icon-disk" />
-                                        <p:commandButton value="UnRegister" id="unRegister" actionListener="#{yodleeBean.userUnregistration}" update="growl" icon="ui-icon-disk" />
-
-                                        <p:commandButton value="Disabled"  id="disabled" disabled="true" />
+                                <div class="BigTopic">
+                                    <div class="Wid50 Fleft">
+                                        <h3>Accounts</h3>
                                     </div>
-                                    <div class="EmptyBox20"></div>
-
-                                    <div class="Container100 Responsive50">
-                                        <div class="EmptyBox150"></div>
-                                        <div class="EmptyBox150"></div>
+                                    <div class="Wid50 Fright">
+                                        <p:commandButton value="Add Site" id="addSite" styleClass="Fright"
+                                                         actionListener="#{yodleeBean.addAcount('ADD_ACC','')}"
+                                                         update=":aggrform:acctData"
+                                                         icon="fa fa-plus" />
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="Container100">
+                            <div class="Container50">
+                                <div class="ContainerIndent">
+                                    <p:dataTable id="acctData" var="siteData" value="#{yodleeBean.aggrData.totalSiteArray}">
+                                        <p:column style="width:6%">
+                                            <p:rowToggler />
+                                        </p:column>
+                                        <p:column headerText="Site"
+                                                  style="width:35%; text-align: left">
+                                            <h:outputText value="#{siteData.key}" />
+                                        </p:column>
+
+                                        <p:column headerText="Balance"
+                                                  style="width:25%; text-align: right">
+                                            <h:outputText value="#{siteData.positionValue}">
+                                                <f:convertNumber currencySymbol="$" type="currency"/>
+                                            </h:outputText>
+                                        </p:column>
+
+                                        <p:column headerText="Operations"
+                                                  style="width:20%; text-align: right">
+                                            <p:commandButton id="editSite"
+                                                             actionListener="#{yodleeBean.addAcount('EDIT_ACC',siteData.info)}"
+                                                             icon="fa fa-fw fa-edit" />
+                                            <p:commandButton id="refreshSite"
+                                                             actionListener="#{yodleeBean.addAcount('REFRESH_ACC',siteData.info)}"
+                                                             icon="fa fa-fw fa-refresh" />
+
+                                        </p:column>
+                                        <p:rowExpansion>
+                                            <p:dataTable  var="acctDetail" value="#{yodleeBean.aggrData.getAggregationSiteArray(siteData.key)}"
+                                                          style="border: 0px;">
+                                                <p:column headerText="Account Name"
+                                                          style="width:50%; text-align: left">
+                                                    <h:outputText value="#{acctDetail.info}"/>
+                                                </p:column>
+
+                                                <p:column headerText="Value"
+                                                          style="width:25%; text-align: right">
+                                                    <h:outputText value="#{acctDetail.positionValue}">
+                                                        <f:convertNumber currencySymbol="$" type="currency"/>
+                                                    </h:outputText>
+                                                </p:column>
+                                            </p:dataTable>
+                                        </p:rowExpansion>
+
+                                    </p:dataTable>
+                                </div>
+
+                            </div>
+                            <div class="Container50">
+                                <div class="ContainerIndent">
+                                    <p:dataTable id="dashData" var="dashData" value="#{yodleeBean.aggrData.totalLevelArray}">
+                                        <p:column headerText="Type"
+                                                  style="width:40%; text-align: left">
+                                            <h:outputText value="#{dashData.key}"/>
+                                        </p:column>
+
+                                        <p:column headerText="Balance"
+                                                  style="width:20%; text-align: right">
+                                            <h:outputText value="#{dashData.positionValue}">
+                                                <f:convertNumber currencySymbol="$" type="currency"/>
+                                            </h:outputText>
+                                        </p:column>
+
+                                    </p:dataTable>
                                 </div>
                             </div>
                         </div>
