--- a/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/acct.xhtml
+++ b/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/acct.xhtml
@@ -17,7 +17,7 @@
 
         <h:outputScript library="yodlee" name="js/yodleeCommon.js" />
 
-        <h:form id="aggrform">
+        <h:form id="acform">
         <p:growl id="growl" life="2000" />
             <div class="Container100">
                 <!-- Left Column -->
@@ -36,16 +36,18 @@
                                         <p:commandButton value="Refresh All" styleClass="MarLeft5 Fright"
                                                          id="refreshData"
                                                          actionListener="#{yodleeBean.refreshAccountsData}"
-                                                         update=":aggrform:dashData"
+                                                         update=":acform:dwArea"
                                                          icon="fa fa-refresh"/>
                                         <p:commandButton value="Add Site" id="addSite" styleClass="MarLeft5 Fright"
                                                          actionListener="#{yodleeBean.addAcount('ADD_ACC','')}"
-                                                         update=":aggrform:acctData"
+                                                         update=":acform:dwArea"
                                                          icon="fa fa-plus" />
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <p:outputPanel id="dwArea" style="border: 0px">
 
                         <div class="Container100">
                             <div class="Container50">
@@ -116,6 +118,7 @@
                                 </div>
                             </div>
                         </div>
+                        </p:outputPanel>
                     </div>
 
                 </div>
