--- a/invessence/modules/web/src/main/webapp/pages/consumer/cto/page_acct.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/cto/page_acct.xhtml
@@ -12,7 +12,7 @@
                     <h3>
                         <h:outputText style="padding-right: 3px" value="Taxable "/>
                         <p:selectBooleanButton value="#{ctobean.taxable}" onLabel="Yes" offLabel="No">
-                            <p:ajax update=":ceForm:accttype"/>
+                            <p:ajax update=":ctoForm:accttype"/>
                         </p:selectBooleanButton>
                     </h3>
 
