--- a/invessence/modules/web/src/main/webapp/pages/consumer/cto/page_address.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/cto/page_address.xhtml
@@ -44,7 +44,7 @@
                         </div>
                         <div class="Container100 MarTop5">
                             <p:selectBooleanCheckbox value="#{ctobean.hasMailingAddress}">
-                                <p:ajax update=":ceForm:addressPanel"/>
+                                <p:ajax update=":ctoForm:addressPanel"/>
                             </p:selectBooleanCheckbox>
                             <h:outputText style="margin-left: 5px" value="Different Mailing address"/>
                         </div>
