--- a/invessence/modules/web/src/main/webapp/pages/consumer/aggr/acct.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/aggr/acct.xhtml
@@ -17,7 +17,7 @@
 
         <h:outputScript library="yodlee" name="js/yodleeCommon.js" />
 
-        <h:form id="aggrform">
+        <h:form id="acform">
         <p:growl id="growl" life="2000" />
             <div class="Container100">
                 <!-- Left Column -->
@@ -33,68 +33,92 @@
                                         <h3>Accounts</h3>
                                     </div>
                                     <div class="Wid50 Fright">
-                                        <p:commandButton value="Add Site" id="addSite" styleClass="Fright"
+                                        <p:commandButton value="Refresh All" styleClass="MarLeft5 Fright"
+                                                         id="refreshData"
+                                                         actionListener="#{yodleeBean.refreshAccountsData}"
+                                                         update=":acform:dwArea"
+                                                         icon="fa fa-refresh"/>
+                                        <p:commandButton value="Add Site" id="addSite" styleClass="MarLeft5 Fright"
                                                          actionListener="#{yodleeBean.addAcount('ADD_ACC','')}"
-                                                         update=":aggrform:acctData"
+                                                         update=":acform:dwArea"
                                                          icon="fa fa-plus" />
                                     </div>
                                 </div>
-
-
-                                <div class="Container100">
-
-                                        <p:dataTable id="acctData" var="consData" value="#{yodleeBean.consDataList}">
-                                            <p:column headerText="Site" >
-                                                <h:outputText value="#{consData.siteDetail.siteName}" />
-<!--
-                                                <h:outputText value="#{consData.siteDetail.siteAccId}" />
--->
-                                            </p:column>
-<!--
-                                            <p:column headerText="Name" >
-                                                <h:outputText value="#{consData.itemDetail.itemDispName}" />
-                                            </p:column>
- -->
-                                            <!--
-                                            <p:column>
-                                                    <h:outputText value="ItemId" />
-                                                <h:outputText value="#{consData.itemDetail.itemId}" />
-                                            </p:column>
-                                            -->
-                                            <p:column headerText="Type" >
-                                                <h:outputText value="#{consData.itemDetail.contServName}" />
-                                            </p:column>
-
-
-                                            <p:column headerText="Account Name">
-                                                <h:outputText value="#{consData.accountDetail.accName}" />
-                                            </p:column>
-
-                                            <p:column headerText="Account Type" >
-                                                <h:outputText value="#{consData.accType}" />
-                                            </p:column>
-
-                                            <p:column headerText="Balance"
-                                                      style="width:10%; text-align: right">
-                                                <h:outputText value="#{consData.avilbBal}">
-                                                    <f:convertNumber currencySymbol="$" type="currency"/>
-                                                </h:outputText>
-                                            </p:column>
-
-                                            <p:column headerText="Operations">
-                                                <p:commandButton id="editSite"
-                                                                 actionListener="#{yodleeBean.addAcount('EDIT_ACC',consData.siteDetail.siteAccId)}"
-                                                                 icon="fa fa-fw fa-edit" />
-                                                <p:commandButton id="refreshSite"
-                                                                 actionListener="#{yodleeBean.addAcount('REFRESH_ACC',consData.siteDetail.siteAccId)}"
-                                                                 icon="fa fa-fw fa-refresh" />
-
-                                            </p:column>
-                                        </p:dataTable>
-                                    </div>
-
                             </div>
                         </div>
+
+                        <p:outputPanel id="dwArea" style="border: 0px">
+
+                        <div class="Container100">
+                            <div class="Container50">
+                                <div class="ContainerIndent">
+                                    <p:dataTable id="acctData" var="siteData" value="#{yodleeBean.aggrData.totalSiteArray}">
+                                        <p:column style="width:6%">
+                                            <p:rowToggler />
+                                        </p:column>
+                                        <p:column headerText="Site"
+                                                  style="width:35%; text-align: left">
+                                            <h:outputText value="#{siteData.key}" />
+                                        </p:column>
+
+                                        <p:column headerText="Balance"
+                                                  style="width:25%; text-align: right">
+                                            <h:outputText value="#{siteData.positionValue}">
+                                                <f:convertNumber currencySymbol="$" type="currency"/>
+                                            </h:outputText>
+                                        </p:column>
+
+                                        <p:column headerText="Operations"
+                                                  style="width:20%; text-align: right">
+                                            <p:commandButton id="editSite"
+                                                             actionListener="#{yodleeBean.addAcount('EDIT_ACC',siteData.info)}"
+                                                             icon="fa fa-fw fa-edit" />
+                                            <p:commandButton id="refreshSite"
+                                                             actionListener="#{yodleeBean.addAcount('REFRESH_ACC',siteData.info)}"
+                                                             icon="fa fa-fw fa-refresh" />
+
+                                        </p:column>
+                                        <p:rowExpansion>
+                                            <p:dataTable  var="acctDetail" value="#{yodleeBean.aggrData.getAggregationSiteArray(siteData.key)}"
+                                                          style="border: 0px;">
+                                                <p:column headerText="Account Name"
+                                                          style="width:50%; text-align: left">
+                                                    <h:outputText value="#{acctDetail.info}"/>
+                                                </p:column>
+
+                                                <p:column headerText="Value"
+                                                          style="width:25%; text-align: right">
+                                                    <h:outputText value="#{acctDetail.positionValue}">
+                                                        <f:convertNumber currencySymbol="$" type="currency"/>
+                                                    </h:outputText>
+                                                </p:column>
+                                            </p:dataTable>
+                                        </p:rowExpansion>
+
+                                    </p:dataTable>
+                                </div>
+
+                            </div>
+                            <div class="Container50">
+                                <div class="ContainerIndent">
+                                    <p:dataTable id="dashData" var="dashData" value="#{yodleeBean.aggrData.totalLevelArray}">
+                                        <p:column headerText="Type"
+                                                  style="width:40%; text-align: left">
+                                            <h:outputText value="#{dashData.key}"/>
+                                        </p:column>
+
+                                        <p:column headerText="Balance"
+                                                  style="width:20%; text-align: right">
+                                            <h:outputText value="#{dashData.positionValue}">
+                                                <f:convertNumber currencySymbol="$" type="currency"/>
+                                            </h:outputText>
+                                        </p:column>
+
+                                    </p:dataTable>
+                                </div>
+                            </div>
+                        </div>
+                        </p:outputPanel>
                     </div>
 
                 </div>
