--- a/invessence/modules/web/src/main/webapp/pages/consumer/aggr/dash.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/aggr/dash.xhtml
@@ -12,8 +12,9 @@
         </f:metadata>-->
 
     <ui:define name="content">
+        <h:outputScript name="js/ydlCharts.js" library="yodlee"/>
 
-        <h:form id="aggrform">
+        <h:form id="dform">
 
             <div class="Container100">
                 <!-- Left Column -->
@@ -29,54 +30,69 @@
                                         <h3>Dashboard</h3>
                                     </div>
                                     <div class="Wid50 Fright">
-                                        <p:commandButton value="Refresh All" styleClass="Fright"
+                                        <p:commandButton value="Refresh All" styleClass="MarLeft5 Fright"
                                                          id="refreshData"
                                                          actionListener="#{yodleeBean.refreshAccountsData}"
-                                                         update=":aggrform:dashData"
+                                                         update=":dform:awArea"
                                                          icon="fa fa-refresh"/>
+                                        <p:commandButton value="Add Site" id="addSite" styleClass="MarLeft5 Fright"
+                                                         actionListener="#{yodleeBean.addAcount('ADD_ACC','')}"
+                                                         update=":dform:awArea"
+                                                         icon="fa fa-plus" />
                                     </div>
                                 </div>
-
-
-
-                                <div class="Container100 Responsive50">
-                                    <div>
-                                        <p:dataTable id="dashData" var="consData" value="#{yodleeBean.consDataList}">
-                                            <p:column headerText="Site">
-                                                <h:outputText value="#{consData.siteDetail.siteName}"/>
+                           </div>
+                        </div>
+                        <p:outputPanel id="awArea" style="border: 0px">
+                            <div class="Container100">
+                                <div class="Container50">
+                                    <div class="ContainerIndent">
+                                        <p:dataTable id="dashData" var="dashData" value="#{yodleeBean.aggrData.totalLevelArray}"
+                                                     style="border: 0px;">
+                                            <p:column style="width:6%">
+                                                <p:rowToggler />
                                             </p:column>
-                                            <p:column headerText="Name">
-                                                <h:outputText value="#{consData.itemDetail.itemDispName}"/>
-                                            </p:column><!--
-                                            <p:column>
-                                                    <h:outputText value="ItemId" />
-                                                <h:outputText value="#{consData.itemDetail.itemId}" />
-                                            </p:column>-->
-                                            <p:column headerText="ContServName">
-                                                <h:outputText value="#{consData.itemDetail.contServName}"/>
-                                            </p:column>
-
-
-                                            <p:column headerText="Account Name">
-                                                <h:outputText value="#{consData.accountDetail.accName}"/>
-                                            </p:column>
-
-                                            <p:column headerText="Type">
-                                                <h:outputText value="#{consData.accType}"/>
+                                            <p:column headerText="Type"
+                                                      style="width:40%; text-align: left">
+                                                <h:outputText value="#{dashData.key}"/>
                                             </p:column>
 
                                             <p:column headerText="Balance"
-                                                      style="width:10%; text-align: right">
-                                                <h:outputText value="#{consData.avilbBal}">
-                                                   <f:convertNumber currencySymbol="$" type="currency"/>
+                                                      style="width:20%; text-align: right">
+                                                <h:outputText value="#{dashData.positionValue}">
+                                                    <f:convertNumber currencySymbol="$" type="currency"/>
                                                 </h:outputText>
                                             </p:column>
 
+                                            <p:rowExpansion>
+                                                <p:dataTable  var="dashDetail" value="#{yodleeBean.aggrData.getAggregationLevelArray(dashData.key)}"
+                                                              style="border: 0px;">
+                                                    <p:column headerText="Site"
+                                                              style="width:50%; text-align: left">
+                                                        <h:outputText value="#{dashDetail.info}"/>
+                                                    </p:column>
+
+                                                    <p:column headerText="Value"
+                                                              style="width:25%; text-align: right">
+                                                        <h:outputText value="#{dashDetail.positionValue}">
+                                                            <f:convertNumber currencySymbol="$" type="currency"/>
+                                                        </h:outputText>
+                                                    </p:column>
+                                                </p:dataTable>
+                                            </p:rowExpansion>
                                         </p:dataTable>
                                     </div>
                                 </div>
+                                <div class="Container50">
+                                    <div class="ContainerIndent">
+                                        <p:chart type="pie" model="#{yodleeBean.yodleeCharts.pieChart}"
+                                                 rendered="#{yodleeBean.yodleeCharts.pieChart != null}"
+                                                 style="width:450px;height:300px" />
+
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </p:outputPanel>
                     </div>
 
                 </div>
