--- a/invessence/modules/web/src/main/webapp/pages/consumer/aggr/profile.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/aggr/profile.xhtml
@@ -24,9 +24,17 @@
 
                                     <div class="Seperator"></div>
                                     <div class="Container100 Responsive100">
-                                        <p:commandButton value="Register" id="register" actionListener="#{yodleeBean.userRegistration}" update="growl" icon="fa fa-check" />
+                                        <p:commandButton value="Register" id="register"
+                                                         rendered="#{! yodleeBean.isUserRegisteredAtYodlee()}"
+                                                         actionListener="#{yodleeBean.userRegistration}"
+                                                         update="@form"
+                                                         icon="fa fa-check" />
 
-                                        <p:commandButton value="UnRegister" id="unRegister" actionListener="#{yodleeBean.userUnRegistration}"  icon="fa fa-close" />
+                                        <p:commandButton value="UnRegister" id="unRegister"
+                                                         rendered="#{yodleeBean.isUserRegisteredAtYodlee()}"
+                                                         actionListener="#{yodleeBean.userUnRegistration}"
+                                                         update="@form"
+                                                         icon="fa fa-close" />
 
                                         <!--<p:commandButton value="Disabled" id="disabled" disabled="true" />-->
                                     </div>
@@ -37,6 +45,7 @@
                         </div>
                     </div>
 
+                    <div class="EmptyBox150"/>
                 </div>
             </div>
 
