--- a/invessence/modules/web/src/main/webapp/pages/consumer/creports.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/creports.xhtml
@@ -57,34 +57,25 @@
                                 <p:column styleClass="Wid20 TextAlLeft">
 
                                     <ui:fragment rendered="#{! report.isPdf}">
-<!--                                        <h:outputLink value="#{report.filename}" target="_report"
+                                        <h:outputLink value="#{report.filename}" target="_report"
                                                       title="#{report.reportName}">
                                             <h:outputText value="View"/>
                                         </h:outputLink>
- -->
-                                        <p:commandButton id="viewButton" rendered="#{! report.isPdf}"
+
+                                   </ui:fragment>
+                                    <ui:fragment rendered="#{report.isPdf}">
+                                        <p:commandButton rendered="#{report.isPdf}"
                                                          styleClass="Fs16 GreenButton"
                                                          process="@this" immediate="true"
-                                                         icon="fa fa-search-plus Fs14 white"
-                                                         actionListener="#{reportBean.viewReport(report)}">
+                                                         icon="fa fa-save Fs14 white"
+                                                         value="Download"
+                                                         action="#{reportBean.downloadReport}">
                                             <f:setPropertyActionListener value="#{report}"
                                                                          target="#{reportBean.selectReport}"/>
                                         </p:commandButton>
-<!--
-                                        <p:commandLink value="View"
-                                                       actionListener="#{reportBean.viewReport(report)}"/>
--->
-                                    </ui:fragment>
+                                </ui:fragment>
 
                             </p:column>
-                                <p:column>
-                                    <ui:fragment rendered="#{report.isPdf}">
-                                        <p:commandLink value="Download" ajax="false"
-                                                       onclick="PrimeFaces.monitorDownload(start, stop);">
-                                            <p:fileDownload value="#{report.reportName}" />
-                                        </p:commandLink>
-                                    </ui:fragment>
-                                </p:column>
                             </p:dataTable>
 
                         </p:panel>
