--- a/showcase/modules/web-showcase/src/main/webapp/index.xhtml
+++ b/showcase/modules/web-showcase/src/main/webapp/index.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/WEB-INF/template.xhtml">
+                template="/template/common/invlayout.xhtml">
 
     <ui:define name="head">
         <script type="text/javascript">
