--- a/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/profile.xhtml
+++ b/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/profile.xhtml
@@ -4,49 +4,63 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions"
-                template="/WEB-INF/template.xhtml">
+                template="/template/common/invlayout.xhtml">
+
+    <!--
+        <f:metadata>
+            <f:event type="preRenderView" listener="#{yodleeBean.preRenderView}"/>
+        </f:metadata>
+    -->
 
     <ui:define name="content">
+        <h:outputScript library="yodlee" name="js/oauth.js"/>
+        <h:outputScript library="yodlee" name="js/sha1.js"/>
+        <h:outputScript library="yodlee" name="js/jquery.colorbox.js"/>
 
-        <h:form id="aggrform">
-            <p:growl id="growl" life="3000" />
-            <div class="Container100">
-                <!-- Left Column -->
-               <ui:include src="leftMenu.xhtml"/>
-                <!-- Right Column -->
-                <div class="Container90 Responsive100">
-                    <div class="Card Wid90 Fright">
-                        <!-- Section -->
-                        <div class="Container100">
-                            <div class="ContainerIndent">
-                                <div class="Card ShadowEffect">
-                                    <h2 class="CardTopic">Profile</h2>
+        <h:outputStylesheet library="yodlee" name="css/colorbox.css"/>
+        <h:outputStylesheet library="yodlee" name="css/main.css"/>
 
-                                    <div class="Seperator"></div>
-                                    <div class="Container100 Responsive100">
-                                        <p:commandButton value="Register" id="register"
-                                                         rendered="#{! yodleeBean.isUserRegisteredAtYodlee()}"
-                                                         actionListener="#{yodleeBean.userRegistration}"
-                                                         update="@form"
-                                                         icon="fa fa-check" />
+        <h:outputScript library="yodlee" name="js/yodleeCommon.js"/>
 
-                                        <p:commandButton value="UnRegister" id="unRegister"
-                                                         rendered="#{yodleeBean.isUserRegisteredAtYodlee()}"
-                                                         actionListener="#{yodleeBean.userUnRegistration}"
-                                                         update="@form"
-                                                         icon="fa fa-close" />
+        <h:outputScript name="js/ydlCharts.js" library="yodlee"/>
 
-                                        <!--<p:commandButton value="Disabled" id="disabled" disabled="true" />-->
-                                    </div>
+        <ui:include src="/pages/consumer/aggr/topMenu.xhtml"/>
 
+        <h:form id="ypform">
+            <p:growl id="growl" showDetail="true" sticky="true" />
 
+            <div class="Container90 Responsive100">
+                <div class="Card Wid90 Fright">
+                    <!-- Section -->
+                    <div class="Container100">
+                        <div class="ContainerIndent">
+                            <div class="Card ShadowEffect">
+                                <h2 class="CardTopic">Profile</h2>
+
+                                <div class="Seperator"></div>
+                                <div class="Container100 Responsive100">
+                                    <p:commandButton value="Register" id="register"
+                                                     rendered="#{! yodleeBean.isUserRegisteredAtYodlee()}"
+                                                     actionListener="#{yodleeBean.userRegistration}"
+                                                     update="@form"
+                                                     icon="fa fa-check" />
+
+                                    <p:commandButton value="UnRegister" id="unRegister"
+                                                     rendered="#{yodleeBean.isUserRegisteredAtYodlee()}"
+                                                     actionListener="#{yodleeBean.userUnRegistration}"
+                                                     update="@from"
+                                                     icon="fa fa-close" />
+
+                                    <!--<p:commandButton value="Disabled" id="disabled" disabled="true" />-->
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
-
-                    <div class="EmptyBox150"/>
                 </div>
+
+                <div class="EmptyBox150"/>
             </div>
 
         </h:form>
