--- a/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/start.xhtml
+++ b/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/start.xhtml
@@ -4,7 +4,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions"
-                template="/WEB-INF/template.xhtml">
+                template="/template/common/invlayout.xhtml">
 
     <ui:define name="content">
 
